@@ -245,6 +245,11 @@ For interface eth0 on host foo.bar.example,<pre>
 (Answer supplied by Jacques Caruso.)
 </p>
 
+<h3>Q: I added the graph_sums option, bug I only get one new graph (instead of two).</h3>
+<p>
+The graph_sums option require that rrdtool version 1.0.39 or above is installed.
+</p>
+
 <h2>3. Client plugins</h2>
 <h3>Q: What is the minimum requirements of a client plugin?</h3>
 <p>
